--- a/package.json
+++ b/package.json
@@ -9,8 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
+    "axios": "^1.9.0",
+    "date-fns": "^4.1.0",
+    "firebase": "^11.7.3",
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.3.2",
+    "next": "15.3.2",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
+    "react-countdown": "^2.3.6",
     "react-dom": "^19.0.0",
-    "next": "15.3.2"
-  }
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.5.0",
+    "uuid": "^11.1.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.7",
+    "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.35",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7"
+  },
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
