--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^8.1.5",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.7.3",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.3.2",
